# argosy-launcher

./: .gitignore  .gitmodules  README.md  TODO.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/schemas/com.nendo.argosy.data.local.ALauncherDatabase/: 11.json  13.json  17.json  20.json  21.json  29.json  32.json  37.json  38.json  46.json  47.json  49.json  56.json  57.json  58.json  59.json  60.json  61.json  62.json  8.json
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/nendo/argosy/: ALauncherApp.kt  MainActivity.kt
app/src/main/kotlin/com/nendo/argosy/di/: AppModule.kt  DatabaseModule.kt
app/src/main/kotlin/com/nendo/argosy/hardware/: AmbientLedContext.kt  AmbientLedManager.kt  AudioAnalyzerTest.kt  (+9 more)
docs/: steam-integration-research.md
gradle/: libs.versions.toml
libretrodroid/: build.gradle  consumer-rules.pro  proguard-rules.pro
libretrodroid/src/androidTest/kotlin/com/swordfish/libretrodroid/: AchievementNativeTest.kt
libretrodroid/src/main/cpp/: CMakeLists.txt  achievements.cpp  achievements.h  achievements_test.cpp  achievements_test.h  environment.cpp  environment.h  libretrodroid.cpp  libretrodroid.h  libretrodroidjni.cpp  libretrodroidjni.h  rcheevos_stubs.c  rewindbuffer.cpp  rewindbuffer.h  video.cpp  video.h  videolayout.cpp  videolayout.h
libretrodroid/src/main/cpp/tests/: CMakeLists.txt  log_host.h  test_runner.cpp
libretrodroid/src/main/cpp/utils/: javautils.h
libretrodroid/src/main/java/com/swordfish/libretrodroid/: AchievementDef.java  GLRetroView.kt  LibretroDroid.java
(+279 files in other folders)
